Fixed button spacing

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -651,6 +651,7 @@ img{
 .contact__button{
   cursor: pointer;
   border: none;
+  margin-top: 2rem;
 }
 
 
